adding promo code to waitlist and generifying components
